	  code. (DLR)
- nano.h:
	- Comment additions and cosmetic tweaks. (DLR)
- search.c:
  findnextstr(), do_replace_loop()
	- Fix potential infinite loops and other misbehavior when doing
	  certain zero-length regex replacements ("^", "$", and "^$").
	  Add a no_sameline parameter to findnextstr(), and set it in
	  the calls in do_replace_loop() when such regexes are found, so
	  that such regexes are only found once per line. (DLR; found by
	  Mike Frysinger and DLR)
- winio.c:
  get_kbinput(), get_accepted_kbinput()
	- Don't pass in the value of the REBIND_DELETE flag anymore.
	  Instead, handle it directly inside the functions. (DLR)
  get_accepted_kbinput()
	- Translate Ctrl-8 into NANO_DELETE_KEY (or NANO_BACKSPACE_KEY
	  if REBIND_DELETE is set), since it apparently is generated
	  sometimes even when keypad() is TRUE. (DLR)
	- Translate KEY_SLEFT into NANO_BACK_KEY and KEY_SRIGHT into
	  NANO_FORWARD_KEY, since they are sometimes generated by
	  Shift-Left and Shift-Right. (DLR)
  get_ascii_kbinput()
	- Tweak to make it slightly more readable. (DLR)
  get_verbatim_kbinput()
	- Modify to take an extra parameter indicating if we should
	  interpret ASCII codes or not. (DLR)
  get_escape_seq_kbinput()
	- Expand to deal with more broken terminals that don't generate
	  keypad values.  Support the escape sequences for Insert,
	  Delete, Home, End, PageUp, and PageDown, [arrow key],
	  Ctrl-[arrow key], and Shift-[arrow key] when needed in the
	  Linux console, the FreeBSD console, the Hurd console, xterm,
	  rxvt, and Eterm.  Also, use get_verbatim_kbinput(), with ASCII
	  interpretation disabled, to read in the sequences. (DLR)
  get_skip_tilde_kbinput()
	- Removed, as it is unneeded due to the expansion of
	  get_escape_seq_kbinput(). (DLR)
  get_mouseinput()
	- Modify to take an extra parameter indicating if we should
	  ungetch() the key equivalents of shortcuts we click on or not.
	  (DLR)
  nanogetstr()